# IPCV-practicals

./: CLI11.hpp  CMakeLists.txt  README.md  volViewer-test.xctestplan  volViewer.cpp
cmake/: dgtal.cmake
data/: PA05-lbl-low.vol  PA05-lbl.vol  PA16-lbl-low.vol  PA16-lbl.vol  PA24-lbl-low.vol  PA24-lbl.vol  fertility-128.vol
docs/: Course Digital Geometry Processing (master IPCV).md  IPCV Practical - Digital scale axis.md  IPCV Practical - Filtering and segmentation of 3D CT thoracic image.md  IPCV Practical - Geometric estimations on 3d digital surfaces.md  IPCV Practical - Homotopic Thinning.md
practical-3D-estimation/: 3D-estimation.cpp
practical-filtering/: vol-filter.cpp
practical-homotopic-thinning/: homotopic-thinning.cpp
practical-scaleaxis/: scaleaxis.cpp
recipes/: polyscope.cmake
utils/: calculus.cpp  geodesics.cpp
